fix z-indexing for sidebar, select dropdown and navigation

--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -6,7 +6,7 @@
   padding: $nav-py 0;
   border: 1px solid rgba(#c3d4e9, 0.4);
   background-color: $color-primary-0;
-  z-index: 30;
+  z-index: 40;
 
   &__container {
     display: flex;
