--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -68,7 +68,7 @@
 
     pointer-events: none;
     position: absolute;
-    z-index: 1;
+    z-index: 30;
     -webkit-box-shadow: -1px 4px 4px 1px rgba(0, 0, 0, 0.33);
     -moz-box-shadow: -1px 4px 4px 1px rgba(0, 0, 0, 0.33);
     box-shadow: -1px 4px 4px 1px rgba(0, 0, 0, 0.33);
